Update website with latest changes: DJ page, new photography projects, updated styling, and all new images

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,9 @@
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="bio.html" class="nav-link">Bio</a></li>
                 <li><a href="engineering.html" class="nav-link">Engineering</a></li>
+                <li><a href="volunteering.html" class="nav-link">Volunteering</a></li>
                 <li><a href="photography.html" class="nav-link">Photography</a></li>
+                <li><a href="dj.html" class="nav-link">DJ</a></li>
                 <li><a href="contact.html" class="nav-link active">Contact Me</a></li>
             </ul>
         </div>
@@ -34,7 +36,8 @@
                     
                     <!-- Soft scroll indicator -->
                     <div class="contact-scroll-indicator" onclick="scrollToContactInfo()">
-                        ↓
+                        <div class="scroll-arrow">↓</div>
+                        <span class="scroll-text">Contact information</span>
                     </div>
                 </div>
             </div>
