--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
                 <li><a href="index.html" class="nav-link active">Home</a></li>
                 <li><a href="bio.html" class="nav-link">Bio</a></li>
                 <li><a href="engineering.html" class="nav-link">Engineering</a></li>
+                <li><a href="volunteering.html" class="nav-link">Volunteering</a></li>
                 <li><a href="photography.html" class="nav-link">Photography</a></li>
+                <li><a href="dj.html" class="nav-link">DJ</a></li>
                 <li><a href="contact.html" class="nav-link">Contact Me</a></li>
             </ul>
         </div>
@@ -25,7 +27,7 @@
     <main class="hero-main">
         <div class="hero-container">
             <h1 class="hero-name">Amedeo Rosenfield</h1>
-            <p class="hero-roles">Aerospace Engineer • Entrepreneur • AI Enthusiast</p>
+            <p class="hero-roles">Student • Aerospace Engineer • AI Enthusiast • Entrepreneur</p>
             <p class="hero-tagline">
                 Pioneering the future through aerospace innovation, 
                 <br>entrepreneurial vision, and intelligent systems
