Add Open Door Sports charity bike ride link to volunteering page

--- a/engineering.html
+++ b/engineering.html
@@ -449,9 +449,21 @@
                                     <div class="project-photos">
                                         <h4 class="photos-heading">Supporting Documentation</h4>
                                         <div class="photos-grid">
-                                            <!-- Placeholder for when you add project images -->
-                                            <div class="project-photo-placeholder">
-                                                <span>Add screenshots of Tia.ai interface</span>
+                                            <div class="project-photo-container" onclick="openLightbox('images/projects/Screenshot 2025-08-11 180943.png', 'Tia.ai Interface Screenshot 1')">
+                                                <img src="images/projects/Screenshot 2025-08-11 180943.png" alt="Tia.ai Interface Screenshot 1" class="project-photo-img">
+                                                <p class="photo-caption">Tia.ai Interface Screenshot 1</p>
+                                                <div class="photo-overlay">
+                                                    <span class="zoom-icon">🔍</span>
+                                                    <span class="zoom-text">Click to enlarge</span>
+                                                </div>
+                                            </div>
+                                            <div class="project-photo-container" onclick="openLightbox('images/projects/Screenshot 2025-08-11 181228.png', 'Tia.ai Interface Screenshot 2')">
+                                                <img src="images/projects/Screenshot 2025-08-11 181228.png" alt="Tia.ai Interface Screenshot 2" class="project-photo-img">
+                                                <p class="photo-caption">Tia.ai Interface Screenshot 2</p>
+                                                <div class="photo-overlay">
+                                                    <span class="zoom-icon">🔍</span>
+                                                    <span class="zoom-text">Click to enlarge</span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
