--- a/volunteering.html
+++ b/volunteering.html
@@ -159,9 +159,9 @@
                                     </div>
 
                                     <div class="volunteer-links">
-                                        <a href="#" class="volunteer-link" target="_blank">
+                                        <a href="https://opendoorsports.networkforgood.com/projects/189668-from-dc-to-montreal-greg-wells-charity-bike-ride" class="volunteer-link" target="_blank">
                                             <span class="link-icon">🔗</span>
-                                            <span class="link-text">Link to Article</span>
+                                            <span class="link-text">View Charity Bike Ride Campaign</span>
                                         </a>
                                     </div>
                                 </div>
