Update contact page: add email and remove emojis

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,13 @@
                         
                         <div class="contact-links-horizontal">
                             <div class="contact-link-item">
-                                <div class="contact-icon">💻</div>
+                                <div class="contact-details">
+                                    <h4>Email</h4>
+                                    <a href="mailto:deorosenfield@gmail.com">deorosenfield@gmail.com</a>
+                                </div>
+                            </div>
+
+                            <div class="contact-link-item">
                                 <div class="contact-details">
                                     <h4>GitHub</h4>
                                     <a href="https://github.com/amedeo-rosenfield" target="_blank">amedeo-rosenfield</a>
@@ -62,7 +68,6 @@
                             </div>
 
                             <div class="contact-link-item">
-                                <div class="contact-icon">💼</div>
                                 <div class="contact-details">
                                     <h4>LinkedIn</h4>
                                     <a href="https://www.linkedin.com/in/amedeo-rosenfield" target="_blank">amedeo-rosenfield</a>
