Update email link to open Gmail instead of default email client

--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                             <div class="contact-link-item">
                                 <div class="contact-details">
                                     <h4>Email</h4>
-                                    <a href="mailto:deorosenfield@gmail.com">deorosenfield@gmail.com</a>
+                                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=deorosenfield@gmail.com" target="_blank">deorosenfield@gmail.com</a>
                                 </div>
                             </div>
 
