Add bulleted What? sections to all engineering project expanded views

--- a/engineering.html
+++ b/engineering.html
@@ -73,6 +73,15 @@
                                 <div class="project-main-content">
                                     <div class="project-details">
                                         <div class="project-section">
+                                            <h4 class="project-subheading">What?</h4>
+                                            <ul class="project-list">
+                                                <li>Engineered a weather-resistant electrical connector for high-speed rail</li>
+                                                <li>Ensured durability against rain, wind, and dust</li>
+                                                <li>Met strict size and contact requirements specified by the customer</li>
+                                            </ul>
+                                        </div>
+
+                                        <div class="project-section">
                                             <h4 class="project-subheading">How?</h4>
                                             <ul class="project-list">
                                                 <li>Designed and assembled 3D connector components using SolidWorks.</li>
@@ -185,6 +194,16 @@
                             <div class="project-content-full">
                                 <div class="project-main-content">
                                     <div class="project-details">
+                                        <div class="project-section">
+                                            <h4 class="project-subheading">What?</h4>
+                                            <ul class="project-list">
+                                                <li>Led the navigation development of an autonomous over-terrain rescue vehicle</li>
+                                                <li>Enabled obstacle avoidance, crash site detection, and repair initiation</li>
+                                                <li>Planned, built, and iteratively refined the vehicle from scratch under tight deadlines</li>
+                                                <li>Coordinated full system integration and a final live demonstration</li>
+                                            </ul>
+                                        </div>
+
                                         <div class="project-section">
                                             <h4 class="project-subheading">How?</h4>
                                             <ul class="project-list">
@@ -407,6 +426,15 @@
                                 <div class="project-main-content">
                                     <div class="project-text-content">
                                         <div class="project-section">
+                                            <h4 class="project-subheading">What?</h4>
+                                            <ul class="project-list">
+                                                <li>Tia.ai is a voice-activated AI productivity coach</li>
+                                                <li>Designed to help users stay organized, focused, and motivated</li>
+                                                <li>Provides personalized goal tracking, task management, and emotional intelligence</li>
+                                            </ul>
+                                        </div>
+
+                                        <div class="project-section">
                                             <h4 class="project-subheading">How?</h4>
                                             <ul class="project-list">
                                                 <li>Developed backend AI processing and natural language understanding using Python</li>
@@ -499,6 +527,14 @@
                             <div class="project-content-full">
                                 <div class="project-main-content">
                                     <div class="project-text-content">
+                                        <div class="project-section">
+                                            <h4 class="project-subheading">What?</h4>
+                                            <ul class="project-list">
+                                                <li>Developed a comprehensive maintenance checklist for advanced lunar printer cooling systems</li>
+                                                <li>Crucial for sustaining optimal operational temperatures in extreme extraterrestrial environments</li>
+                                            </ul>
+                                        </div>
+
                                         <div class="project-section">
                                             <h4 class="project-subheading">How?</h4>
                                             <ul class="project-list">
