Add family photo to bio page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main class="hero-main">
         <div class="hero-container">
             <h1 class="hero-name">Amedeo Rosenfield</h1>
-            <p class="hero-roles">Student • Aerospace Engineer • AI Enthusiast • Entrepreneur</p>
+            <p class="hero-roles">Student • Aerospace Engineer • AI Enthusiast • Entrepreneur • Artist</p>
             <p class="hero-tagline">
             </p>
         </div>
